don't downsize fixed with font.  when terminus is around its illegible

--- a/docs/css/base.css
+++ b/docs/css/base.css
@@ -82,7 +82,6 @@ strong {
 
 pre, code, kbd, tt, samp, tt {
     font-family: terminus,"andale mono",monospace;
-    font-size: .9em;
 }
 
 a {
